--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,7 @@
 * {
     font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 html {
     scroll-behavior: smooth;
@@ -8,3 +10,11 @@ html {
     max-width: 1140px;
     margin: 0 auto;
 }
+.title_fz26 {
+    text-align: center;
+    font-size: 26px;
+    font-weight: 700;
+}
+@import 'blocks/btns';
+@import 'blocks/promo';
+@import 'blocks/advantages';
