--- a/src/sass/blocks/_btns.scss
+++ b/src/sass/blocks/_btns.scss
@@ -1,11 +1,17 @@
 .btn {
+    display: block;
+    margin: 0 auto;
     width: 160px;
     height: 45px;
-    background-color: #ec644b;
+    background-color: var(--mc);
     border: none;
     line-height: 22px;
     text-align: center;
     text-transform: uppercase;
     border-radius: 23px;
     color: #fff;
+    cursor: pointer;
+    &:hover {
+        background-color: #dc5238;
+    }
 }
