--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -58,13 +58,14 @@
         text-align: center;
     }
     &__form {
+        padding: 30px 0;
         margin-top: 70px;
         position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 1140px;
-        height: 166px;
+        max-width: 1140px;
+        min-height: 166px;
         border: 1px solid#3a3a3a;
         &__labelicon {
             position: absolute;
@@ -92,19 +93,23 @@
         }
     }
     &__input {
-       input {
-        border: 1px solid#3a3a3a;
-        border-radius: 23px;
-        width: 268px;
-        height: 45px;
-        padding-left: 15px;
-        opacity: 0.7;
-        color: #101010;
-        font-size: 13px;
-        font-weight: 300;
-        line-height: 24px;
-        text-align: left;
-        margin-right: 10px
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        row-gap: 10px;
+        input {
+            border: 1px solid#3a3a3a;
+            border-radius: 23px;
+            width: 268px;
+            height: 45px;
+            padding-left: 15px;
+            opacity: 0.7;
+            color: #101010;
+            font-size: 13px;
+            font-weight: 300;
+            line-height: 24px;
+            text-align: left;
+            margin-right: 10px
        }
     }
     
