--- a/src/sass/blocks/_scheme.scss
+++ b/src/sass/blocks/_scheme.scss
@@ -3,5 +3,21 @@
     background: #f3f3f3;
     .container {
         padding-top: 51px;
+        padding-bottom: 46px;
+    }
+    &__wrapper {
+        margin-top: 33px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 40px;
+        justify-content: center;
+    }
+    &__item {
+        max-width: 255px;
+        text-align: center;
+        &__header {
+            margin-top: 28px;
+            font-size: 16px;
+        }
     }
 }
