--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -38,6 +38,13 @@ hr {
     font-weight: 700;
     align-self: end;
 }
+.subheader_min {
+    margin-top: 10px;
+    font-size: 15px;
+    font-family: "Roboto - Light";
+    font-weight: 300;
+    font-style: normal;
+}
 :root {
     --mc: #ec644b;
 }
@@ -48,3 +55,4 @@ hr {
 @import 'blocks/agent';
 @import 'blocks/price';
 @import 'blocks/scheme';
+@import 'blocks/reviews';
