--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,6 +1,6 @@
 .advantages {
     min-height: 590px;
-    padding-top: 57px;
+    padding: 57px 10px 10px 10px;
     background-color: #f3f3f3;
     &__grid {
         margin-top: 32px;
