--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,7 +2,7 @@
     min-height: 680px;
     background: url("../img/bg.jpg") center/cover no-repeat;
     .container {
-        padding: 23px 0 82px 0;
+        padding: 23px 10px 82px 10px;
     }
     &__title {
         margin-top: 10px;
