--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -13,7 +13,7 @@
             height: 160px;
             top: 45%;
             left: 51%;
-            background: url("../../img/bg-map.png") center/cover no-repeat;
+            background: url("../img/bg-map.png") center/cover no-repeat;
             z-index: 10;
         }
         &__descr {
