--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -87,7 +87,7 @@
         &__map {
             &__leg {
                 width: 220px;
-                background: url("../../img/bg-map.png") no-repeat;
+                background: url("../img/bg-map.png") no-repeat;
             }
             &__descr {
                 top: 10px;
