--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -18,7 +18,7 @@
         .slick-next.slick-arrow {
             position: absolute;
             display: block;
-            background: url("../../icons/right.png");
+            background: url("../icons/right.png");
             width: 14px;
             height: 46px;
             top: 25%;
@@ -30,7 +30,7 @@
         .slick-prev.slick-arrow {
             position: absolute;
             display: block;
-            background: url("../../icons/left.png");
+            background: url("../icons/left.png");
             width: 14px;
             height: 46px;
             top: 25%;
