--- a/src/sass/blocks/_writetous.scss
+++ b/src/sass/blocks/_writetous.scss
@@ -1,6 +1,6 @@
 .writetous {
     min-height: 440px;
-    background: url("../../img/bg-4.jpg") center/cover no-repeat;
+    background: url("../img/bg-4.jpg") center/cover no-repeat;
     margin-top: 35px;
     .container {
         padding: 62px 15px 80px 15px;
