--- a/src/sass/blocks/_agent.scss
+++ b/src/sass/blocks/_agent.scss
@@ -1,7 +1,7 @@
 .agent {
     min-height: 342px;
     margin-top: 57px;
-    background: url("../../img/bg-2.jpg") center no-repeat;
+    background: url("../img/bg-2.jpg") center no-repeat;
     .container {
         padding-top: 58px;
     }
@@ -31,5 +31,5 @@
     }
 }
 .manager {
-    background: url("../../img/bg-3.jpg") center no-repeat;
+    background: url("../img/bg-3.jpg") center no-repeat;
 }
